# ibm-odm-management-mcp-server

./: .gitattributes  .gitignore  .linkspector.yml  .secrets.baseline  Dockerfile  Dockerfile-ubi  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  cve-scan-trivy.yml  cve-scan.yml  detect-secrets.yml
docs/: Auth-remote-mode.md  Build-Docker-image.md  Claude-desktop-integration-guide.md  IBM-Bob-integration-guide.md
samples/: deploy_demo_materials.sh
src/decisioncenter_mcp_server/: Credentials.py  DecisionCenterEndpoint.py  DecisionCenterManager.py  MCPServer.py  ToolTrace.py  __init__.py
tests/: DecisionServer-81110.wadl  DecisionServer-9001.wadl  DecisionServer-9501.wadl  DecisionServer-9600.wadl  openapi-9600.json  test_credentials.py  test_decisioncentermanager.py  test_mcp_server.py  test_oauth_password_grant.py
