[project]
name = "decisioncenter-mcp-server"
version = "0.1.0"
description = "An MCP Server to integrate with IBM ODM Decision Center"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "cryptography>=46.0.3",
 "mcp>=1.21.0",
 "openapi3-parser>=1.1.22",
 "pyjwt>=2.10.1",
 "pytest>=9.0.2",
 "pytest-asyncio>=1.3.0",
 "pytest-cov>=7.0.0",
 "pytest-html>=4.1.1",
 "requests>=2.32.5",
 "responses>=0.25.8",
 "validator-collection>=1.5.0",
]
[[project.authors]]
name = "Frederic Mercier"
email = "f.mercier@fr.ibm.com"

[build-system]
requires = [ "uv_build>=0.8.5,<0.9.0",]
build-backend = "uv_build"

[project.scripts]
ibm-odm-management-mcp-server = "decisioncenter_mcp_server:main"
decisioncenter-mcp-server = "decisioncenter_mcp_server:main"
