[project]
name = "decisioncenter-mcp-server"
version = "0.1.0"
description = "An MCP Server to integrate with IBM ODM Decision Center"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "cryptography>=48.0.1",
 "idna>=3.15",
 "mcp>=1.28.1,<2",
 "openapi3-parser>=1.1.22",
 "pygments>=2.20.0",
 "pyjwt>=2.13.0",
 "pytest>=9.0.3",
 "pytest-asyncio>=1.3.0",
 "pytest-cov>=7.0.0",
 "pytest-html>=4.1.1",
 "python-dotenv>=1.2.2",
 "python-multipart>=0.0.30",
 "requests>=2.33.0",
 "responses>=0.25.8",
 "starlette>=1.3.1",
 "urllib3>=2.7.0",
 "validator-collection>=1.5.0",
]
[[project.authors]]
name = "Frederic Mercier"
email = "f.mercier@fr.ibm.com"

[build-system]
requires = [ "uv_build>=0.8.5,<0.9.0",]
build-backend = "uv_build"

[project.scripts]
ibm-odm-management-mcp-server = "decisioncenter_mcp_server:main"
decisioncenter-mcp-server = "decisioncenter_mcp_server:main"
